# QuaternionTest

./: CMakeLists.txt  README.md
src/application/: main.cpp
src/business/: Colorizer4D.hpp  ConvexHullBuilder.cpp  ConvexHullBuilder.hpp  Quaternion.cpp  Quaternion.hpp  Sketch.cpp  Sketch.hpp  TesseractRotator.cpp  TesseractRotator.hpp
src/business/engine/: Engine.cpp  Engine.hpp  ILogic.hpp
src/util/: Vector2D.cpp  Vector2D.hpp  Vector4D.cpp  Vector4D.hpp
